First pass at synchronizing tests

--- a/linux_impl/src/vesc_driver/CMakeLists.txt
+++ b/linux_impl/src/vesc_driver/CMakeLists.txt
@@ -119,6 +119,7 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
   include
+  ../../../equipment_testing/common
 )
 
 ## Declare a C++ library
@@ -145,6 +146,7 @@ add_executable(
   src/vesc_config.cpp
 	src/vesc_usb.cpp
   src/vesc_ros.cpp
+  ../../../equipment_testing/common/tcp_handler.cpp
 )
 target_link_libraries(driver ${catkin_LIBRARIES})
 
