--- a/pff_equipment_testing/src/pff_equipment_testing/config/hw_setup.yaml
+++ b/pff_equipment_testing/src/pff_equipment_testing/config/hw_setup.yaml
@@ -1,6 +1,6 @@
 # Global params
 loop_rate: 100
-log_location: /home/jwhite/bldc/pff_equipment_testing
+log_location: ~/
 
 # Arduino params
 arduino_device_file: /dev/pff/arduino_uno
