Feature/equipment testing (#13)
* v6 test rig features [branch ch9147]

* Creating ros version of test setup

* Removing tcp server params

* Rate limiting the force gauge readings, and adding time to vesc data

* Adjusted read rates, improved csv formatting and install process

* Reset log directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 build
 .dep
 devel
+equipment_testing/rpi/Aggregated_Logs.dat
+equipment_testing/rpi/rpi
+.vscode
+pff_equipment_testing/src/pff_equipment_testing/Aggregated_Logs.dat
